# IOOptCompilerPass

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  compare_io.py  compare_mpi_io.py  database_wal_benchmark.cpp  http_benchmark.cpp  lto_bench_main.cpp  media_benchmark.cpp  mpi_write_at_benchmark.cpp  pixel_write_benchmark.cpp  repeat_compare_io.py  repeat_time_io.py  run_compare_output.sh  run_time_output.sh  time_mpi_io.py
combined-tests/: end_to_end_main.cpp  test_runner.py  test_runner.sh
harness-src/: ioopt.py
include/: IODialect.td
llvm-src/: IOOptimisationPass.cpp
llvm-tests/: CMakeLists.txt  barrier_fsync_split.cpp  barrier_madvise_and_fadvise_split.cpp  cross_block_hoist.c  cxx_write_merge.cpp  example_application.c  example_io_library.c  fwrite_barrier.cpp  fwrite_size_count_corruption.cpp  hoist_edge_cases.c  hoist_positive.c  iov_max_writev_split.cpp  ipa_collapse.cpp  lit.cfg.py  lit.site.cfg.py.in  loop_hoist_safety.cpp  loop_hoist_unsafe_conditional_clobber.cpp  loop_hoist_unsafe_cross_slice_clobber.cpp  loop_lazy_flush_dynamic.cpp  lto_merge.cpp  merge_negative.c  merge_positive.c  mpi_contiguous.cpp  mpi_status_corruption.cpp  optimised_pwrite.cpp  posix_read_hoist.c  posix_write_merge.c  pwrite_overlap.cpp  run_fullstack_test.sh  scev_loop.c  writing_tests.cpp
mlir-src/: CMakeLists.txt  IOAdvancedOptimisations.cpp  IODialect.cpp  IODialect.h  IODialect.td  IOLoopBatching.cpp  IOLoweringToLLVM.cpp  IOPasses.h  IORecognition.cpp  TargetUtils.cpp  TargetUtils.h  io-opt.cpp
mlir-tests/: .lit_test_times.txt  CMakeLists.txt  async_promotion.mlir  lit.cfg.py  lit.site.cfg.py.in  loop_batching.mlir  lowering_to_llvm.mlir  mmap_promotion.mlir  prefetch_injection.mlir  recognise-io.mlir  run_zerocopy_test.sh  test_batch_read_complicated_step.mlir  test_batch_read_step.mlir  test_batch_write_complicated_step.mlir  test_batch_write_step.mlir  test_hazards.mlir  test_loop_batching.mlir  test_read_batching.mlir  zerocopy_test.c
mlir-tests/Output/: loop_batching.mlir.script  lowering_to_llvm.mlir.script
runtime_src/: CMakeLists.txt  ioopt_runtime.c
src/: CMakeLists.txt  IOOptimisationPass.cpp
testing/: benchmark_postgres_harness.py  fio-lto-optimised-setup.sh  fio-lto-original-setup.sh  fio-optimised-setup.sh  fio-original-setup.sh  ioopt-benchmark.fio  native_vsync_benchmark.fio  postgres_lto_optimised-setup.sh  postgres_lto_original-setup.sh  postgres_optimised-setup.sh  postgres_original-setup.sh  postgres_test.sh  rocksdb-optimised-lto-build-setup.sh  rocksdb-optimised-lto-test-setup.sh  rocksdb-original-lto-test-setup.sh
tests/: boundary_asymmetry.cpp  cross_block_hoist.c  cxx_write_merge.cpp  file_descriptor_change.cpp  fwrite_barrier.cpp  fwrite_size_count_corruption.cpp  hazard_alias_mutation.cpp  hazard_opaque_barrier.cpp  hoist_edge_cases.c  hoist_positive.c  length_dominance_hazard.cpp  lit.site.cfg.py.in  loop_lazy_flush_dynamic.cpp  loop_lazy_flush_high_watermark.cpp  loop_lazy_flush_positive.cpp  lto_merge.cpp  merge_negative.c  merge_positive.c  mpi_status_corruption.cpp  no_speculative_read.cpp  offset_pwrite_contigious.cpp  optimised_pwrite.cpp  partial_write_spoof.cpp  posix_read_hoist.c  posix_write_merge.c  pwrite_overlap.cpp  scev_loop.c  shadow_buffer.cpp  strided_gather.cpp  unprofitable.cpp  vectored.cpp  war_hazard.cpp  writing_tests.cpp
